# bp3

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  bp3input.C  bp3input.h  bp3likelihood.C  bp3likelihood.h  bp3main.C  flags  functions.C  mytimer.h
bp3lib/: Makefile  Makefile.am  Makefile.in  bp3_version.h  covmat.h  crystal.C  crystal.h  gauss.C  gauss.h  gaussian.h  i0.c  i1.c  input.C  input.h  likelihood.C  likelihood.h  llhood.h  matrix.h  minimizer.C  minimizer.h  misc.C  misc.h  model.C  model.h  pavol.C  sfdata.C  sfdata.h  tabfunc.C  tabfunc.h  tabfunctable.h
example/: sad.log.g0ld  sad.log.g0ld.refactor  sad.sh
tests/: cholesky_inverse.cpp  compile_lapack.sh  compile_mkl.sh  mytimer.h
